# YanisBmdn.github.io

./: LICENSE  README.md  pyproject.toml  vercel.json
app/: app.py  util.py
app/static/styles/: styles.css
app/templates/: index.html  scan.html
